--- a/.gitignore
+++ b/.gitignore
@@ -36,3 +36,4 @@ libs/Botania r1.7-229-deobf.jar
 libs/industrialcraft-2-2.2.817-experimental-api.jar
 libs/industrialcraft-2-2.2.817-experimental-dev.jar
 SBM-CardboardBoxes.txt
+setup.bat
