--- a/build.gradle
+++ b/build.gradle
@@ -10,34 +10,35 @@ buildscript {
             name = "sonatype"
             url = "https://oss.sonatype.org/content/repositories/snapshots/"
         }
+        maven {
+             url "https://plugins.gradle.org/m2/"
+       }
     }
     dependencies {
-        classpath 'net.minecraftforge.gradle:ForgeGradle:2.2-SNAPSHOT'
+        classpath 'net.minecraftforge.gradle:ForgeGradle:2.3-SNAPSHOT'
+        classpath "org.ajoberstar:grgit:2.1.0"
     }
 }
 
 plugins {
-  id 'com.gradle.build-scan' version '1.4'
-  id "com.matthewprenger.cursegradle" version "1.0.9"
+  id 'com.matthewprenger.cursegradle' version '1.0.9'
   id 'net.saliman.cobertura' version '2.2.5'
   id 'com.github.kt3k.coveralls' version '2.0.1'
-  //id "com.github.johnrengelman.shadow" version "1.2.2"
-  id "net.franz-becker.gradle-lombok" version "1.3"
-  id 'com.jfrog.bintray' version '1.1'
-  id "se.bjurr.gitchangelog.git-changelog-gradle-plugin" version "1.32"
+  id "se.bjurr.gitchangelog.git-changelog-gradle-plugin" version "1.50"
 }
 
-apply from: 'https://raw.githubusercontent.com/BuiltBrokenModding/BuiltBrokenScripts/1.10.2/index/index.gradle'
-apply plugin: 'net.minecraftforge.gradle.forge'
+apply from: 'https://raw.githubusercontent.com/BuiltBrokenModding/BuiltBrokenScripts/1.12.2/index/index.gradle'
 apply plugin: 'com.github.kt3k.coveralls'
 apply plugin: 'jacoco'
+apply plugin: "org.ajoberstar.grgit"
 
+println archivesBaseName 
 
 dependencies 
 {
     testCompile 'junit:junit:4.11'
-    //compile "dev.builtbroken.voltzengine:VoltzEngine:1.7.10-0.+:deobf-dev"
 }
+
 
 jacocoTestReport {
     reports {
