--- a/gradle.properties
+++ b/gradle.properties
@@ -1,7 +1,4 @@
-version_major=0
-version_minor=0
-version_revis=2
-archivebase=SBM-CardboardBoxes
-groupid=sbm-cardboardboxes
-org=builtbroken
-startGitRev=c739a8a
+# Sets default memory used for gradle commands. Can be overridden by user or command line properties.
+# This is required to provide enough memory for the Minecraft decompilation process.
+org.gradle.jvmargs=-Xmx3G
+org.gradle.daemon=false
