--- a/.gitignore
+++ b/.gitignore
@@ -1,41 +1,25 @@
-/bin
-/out
-/run
-*.classpath
-*.project
-.settings/
-CREDITS-fml.txt
-LICENSE-fml.txt
-MinecraftForge-Credits.txt
-MinecraftForge-License.txt
-build/
-eclipse/
-forge-1.6.4-9.11.1.964-changelog.txt
-.gradle/
-output/
-.cache
-*.iml
+# eclipse
+bin
+*.launch
+.settings
+.metadata
+.classpath
+.project
+
+# idea
+out
 *.ipr
 *.iws
-*.idea/
-logs/
-html/downloads/
-downloads/
-*.xml
-VoltzEngine.txt
-APP-AuthTest/
-CompiledWith.txt
-banned-ips.json
-banned-players.json
-ops.json
-whitelist.json
-libs/CodeChickenCore-1.7.10-1.0.7.47-dev.jar
-libs/CodeChickenLib-1.7.10-1.1.3.140-dev.jar
-libs/NotEnoughItems-1.7.10-1.0.5.118-dev.jar
-libs/Botania r1.7-229-deobf.jar
-libs/industrialcraft-2-2.2.817-experimental-api.jar
-libs/industrialcraft-2-2.2.817-experimental-dev.jar
-SBM-CardboardBoxes.txt
-setup.bat
-build.bat
-src/main/java/com/builtbroken/cardboardboxes/Cardboardboxes.java
+*.iml
+.idea
+
+# gradle
+build
+.gradle
+
+# other
+eclipse
+run
+
+# Files from Forge MDK
+forge*changelog.txt
