--- a/src/main/resources/META-INF/mods.toml
+++ b/src/main/resources/META-INF/mods.toml
@@ -1,5 +1,5 @@
 modLoader = "javafml" #mandatory
-loaderVersion = "[33,)" #mandatory (24 is current forge version)
+loaderVersion = "[37,)" #mandatory (24 is current forge version)
 license = "MIT"
 issueTrackerURL = "https://github.com/BuiltBrokenModding/SBM-cardboardBoxes/issues" #optional
 [[mods]] #mandatory
@@ -17,13 +17,13 @@ Simplistic storage for moving tiles while maintaining inventories, and settings.
 [[dependencies.cardboardboxes]] #optional
 modId = "forge"
 mandatory = true
-versionRange = "[33,)"
+versionRange = "[37,)"
 ordering = "NONE"
 side = "BOTH"
 
 [[dependencies.cardboardboxes]]
 modId = "minecraft"
 mandatory = true
-versionRange = "[1.16.2,)"
+versionRange = "[1.17.1,1.18)"
 ordering = "NONE"
 side = "BOTH"
