--- a/src/main/resources/META-INF/mods.toml
+++ b/src/main/resources/META-INF/mods.toml
@@ -24,6 +24,6 @@ side = "BOTH"
 [[dependencies.cardboardboxes]]
 modId = "minecraft"
 mandatory = true
-versionRange = "[1.16.2,)"
+versionRange = "[1.16.2,1.17)"
 ordering = "NONE"
 side = "BOTH"
