--- a/src/main/resources/META-INF/mods.toml
+++ b/src/main/resources/META-INF/mods.toml
@@ -1,5 +1,5 @@
 modLoader = "javafml"
-loaderVersion = "[41,)"
+loaderVersion = "[44,)"
 license = "MIT"
 issueTrackerURL = "https://github.com/BuiltBrokenModding/SBM-cardboardBoxes/issues"
 
@@ -9,18 +9,18 @@ issueTrackerURL = "https://github.com/BuiltBrokenModding/SBM-cardboardBoxes/issu
 	displayName = "[SBM] Cardboard Boxes"
 	displayURL = "https://minecraft.curseforge.com/projects/sbm-cardboardboxes/"
 	authors = "BuiltBrokenModding"
-	description = '''Simplistic storage for moving tiles while maintaining inventories, and settings.'''
+	description = '''Simplistic storage for moving block entities while maintaining inventories, and settings.'''
 
 [[dependencies.cardboardboxes]]
 	modId = "forge"
 	mandatory = true
-	versionRange = "[41.0.94,)"
+	versionRange = "[44.0.6,)"
 	ordering = "NONE"
 	side = "BOTH"
 
 [[dependencies.cardboardboxes]]
 	modId = "minecraft"
 	mandatory = true
-	versionRange = "[1.19,1.20)"
+	versionRange = "[1.19.3,1.20)"
 	ordering = "NONE"
 	side = "BOTH"
