--- a/src/main/resources/META-INF/mods.toml
+++ b/src/main/resources/META-INF/mods.toml
@@ -1,6 +1,6 @@
 modLoader = "javafml"
-loaderVersion = "[44,)"
-license = "MIT"
+loaderVersion = "[46,)"
+license = "MIT https://github.com/BuiltBrokenModding/SBM-cardboardBoxes/blob/1.20/LICENSE"
 issueTrackerURL = "https://github.com/BuiltBrokenModding/SBM-cardboardBoxes/issues"
 
 [[mods]]
@@ -14,13 +14,13 @@ issueTrackerURL = "https://github.com/BuiltBrokenModding/SBM-cardboardBoxes/issu
 [[dependencies.cardboardboxes]]
 	modId = "forge"
 	mandatory = true
-	versionRange = "[44.0.6,)"
+	versionRange = "[46,)"
 	ordering = "NONE"
 	side = "BOTH"
 
 [[dependencies.cardboardboxes]]
 	modId = "minecraft"
 	mandatory = true
-	versionRange = "[1.19.3,1.20)"
+	versionRange = "[1.20,1.21)"
 	ordering = "NONE"
 	side = "BOTH"
