feature: update to 1.20.2 using NeoForge

--- a/build.gradle
+++ b/build.gradle
@@ -1,22 +1,12 @@
-buildscript {
-    repositories {
-        maven { url = 'https://maven.minecraftforge.net' }
-        maven { url = 'https://maven.parchmentmc.org' }
-        mavenCentral()
-    }
-
-    dependencies {
-		classpath group: 'net.minecraftforge.gradle', name: 'ForgeGradle', version: '[6.0,6.2)', changing: true
-        classpath 'org.parchmentmc:librarian:1.+'
-    }
+plugins {
+    id 'java-library'
+    id 'eclipse'
+    id 'idea'
+    id 'net.neoforged.gradle.userdev' version '[7.0,7.1)'
+//	id 'org.parchmentmc.librarian.forgegradle' version '1.+'
 }
 
-apply plugin: 'net.minecraftforge.gradle'
-apply plugin: 'org.parchmentmc.librarian.forgegradle'
-apply plugin: 'eclipse'
-apply plugin: 'maven-publish'
-
-version = '1.20-0.1.0'
+version = '1.20.2-0.1.0'
 group = 'com.builtbroken.cardboardboxes'
 
 base {
@@ -25,27 +15,24 @@ base {
 
 java.toolchain.languageVersion = JavaLanguageVersion.of(17)
 
-minecraft {
-	mappings channel: 'parchment', version: '1.19.3-2023.03.12-1.20'
-	copyIdeResources = true
+runs {
+    configureEach {
+        systemProperty 'forge.logging.console.level', 'debug'
+        modSource project.sourceSets.main
+    }
 
-    runs {
-        client {
-            properties 'forge.logging.console.level': 'debug'
-            workingDirectory project.file('run/client')
-            source sourceSets.main
-        }
-        server {
-            properties 'forge.logging.console.level': 'debug'
-            args '-nogui'
-            workingDirectory project.file('run/server')
-            source sourceSets.main
-        }
+    client {
+        workingDirectory project.file('run/client')
+    }
+
+    server {
+        workingDirectory project.file('run/server')
+        programArgument '-nogui'
     }
 }
 
 dependencies {
-	minecraft 'net.minecraftforge:forge:1.20-46.0.12'
+    implementation 'net.neoforged:neoforge:20.2.47-beta'
 }
 
 tasks.named('jar', Jar).configure {
