--- a/src/main/resources/META-INF/mods.toml
+++ b/src/main/resources/META-INF/mods.toml
@@ -1,6 +1,6 @@
 modLoader = "javafml"
-loaderVersion = "[46,)"
-license = "MIT https://github.com/BuiltBrokenModding/SBM-cardboardBoxes/blob/1.20/LICENSE"
+loaderVersion = "[1,)"
+license = "MIT https://github.com/BuiltBrokenModding/SBM-cardboardBoxes/blob/1.20.2/LICENSE"
 issueTrackerURL = "https://github.com/BuiltBrokenModding/SBM-cardboardBoxes/issues"
 
 [[mods]]
@@ -12,15 +12,15 @@ issueTrackerURL = "https://github.com/BuiltBrokenModding/SBM-cardboardBoxes/issu
 	description = '''Simplistic storage for moving block entities while maintaining inventories, and settings.'''
 
 [[dependencies.cardboardboxes]]
-	modId = "forge"
+	modId = "neoforge"
 	mandatory = true
-	versionRange = "[46,)"
+	versionRange = "[20.2,)"
 	ordering = "NONE"
 	side = "BOTH"
 
 [[dependencies.cardboardboxes]]
 	modId = "minecraft"
 	mandatory = true
-	versionRange = "[1.20,1.21)"
+	versionRange = "[1.20.2,1.21)"
 	ordering = "NONE"
 	side = "BOTH"
