--- a/src/main/resources/META-INF/mods.toml
+++ b/src/main/resources/META-INF/mods.toml
@@ -1,6 +1,6 @@
 modLoader = "javafml"
 loaderVersion = "[1,)"
-license = "MIT https://github.com/BuiltBrokenModding/SBM-cardboardBoxes/blob/1.20.2/LICENSE"
+license = "MIT https://github.com/BuiltBrokenModding/SBM-cardboardBoxes/blob/1.20.4/LICENSE"
 issueTrackerURL = "https://github.com/BuiltBrokenModding/SBM-cardboardBoxes/issues"
 
 [[mods]]
@@ -14,13 +14,13 @@ issueTrackerURL = "https://github.com/BuiltBrokenModding/SBM-cardboardBoxes/issu
 [[dependencies.cardboardboxes]]
 	modId = "neoforge"
 	mandatory = true
-	versionRange = "[20.2.59-beta,)"
+	versionRange = "[20.3,)"
 	ordering = "NONE"
 	side = "BOTH"
 
 [[dependencies.cardboardboxes]]
 	modId = "minecraft"
 	mandatory = true
-	versionRange = "[1.20.2,1.21)"
+	versionRange = "[1.20.3,1.21)"
 	ordering = "NONE"
 	side = "BOTH"
